Finished navbar styling and added outputElement

--- a/index.html
+++ b/index.html
@@ -3,14 +3,26 @@
 <head>
   <title>Casey's Car Lot</title>
   <link rel="stylesheet" type="text/css" href="quiz.css">
+  <link rel="stylesheet" type="text/css" href="/bower_components/bootstrap/dist/css/bootstrap.min.css">
 </head>
 <body>
 <div class="container"> <!--Bootstrap Container Start-->
+<nav class="row navbar"> <!--Navbar Start-->
+    <div class="col-md-3">
+      <h4>Casey's Car Lot</h4>
+    </div>
+    <div class="col-md-5">
+      <input type="text" name="userInputField" id="############" class="fullWidth">
+    </div>
+    <div class="col-md-2">
+      <button id="navbarButton">Button</button>
+    </div>
+</nav> <!--Navbar End-->
+<div id="outputElement" class="carOutputDiv"> <!--Car DIV Start-->
 
+&nbsp
 
-
-
-
+</div> <!--Car DIV End-->
 
 </div> <!--Bootstrap Container End-->
 <script type="text/javascript" src="CarLot.js"></script>
