--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <h4>Casey's Car Lot</h4>
     </div>
     <div class="col-md-5">
-      <input type="text" name="userInputField" id="############" class="fullWidth">
+      <label>Enter Description: <input type="text" name="userInputField" id="############" class="fullWidth"></label>
     </div>
     <div class="col-md-2">
       <button id="navbarButton">Button</button>
