Sort of working. Needs to be aligned

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 <div class="container"> <!--Bootstrap Container Start-->
+
 <nav class="row navbar"> <!--Navbar Start-->
     <div class="col-md-3">
       <h4>Casey's Car Lot</h4>
@@ -18,12 +19,15 @@
       <button id="navbarButton">Button</button>
     </div>
 </nav> <!--Navbar End-->
-<div id="outputElement" class="carOutputDiv"> <!--Car DIV Start-->
+
+
+<div class="row"><!--Car ROW MARKER Start-->
+<div id="outputElement" class="carOutputDiv container-fluid"> <!--Car DIV Start-->
 
 &nbsp
 
-</div> <!--Car DIV End-->
-
+</div> <!--Car OUTPUTDIV End-->
+</div> <!--Car ROW MARKER End-->
 </div> <!--Bootstrap Container End-->
 <script type="text/javascript" src="CarLot.js"></script>
 <script type="text/javascript" src="quiz.js"></script>
