More failed alignment tweaks. Moving on to event listeners

--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
       <button id="navbarButton">Button</button>
     </div>
 </nav> <!--Navbar End-->
+<div class="flex-center"> <!--Car FLEX Start-->
+<div class="row"><!--Car ROW Start-->
 
-
-<div class="row"><!--Car ROW MARKER Start-->
-<div id="outputElement" class="carOutputDiv container-fluid"> <!--Car DIV Start-->
-
-&nbsp
-
+<div id="outputElement" class="carOutputDiv container-fluid"> <!--Car OUTPUTDIV Start-->
+<!-- &nbsp -->
 </div> <!--Car OUTPUTDIV End-->
-</div> <!--Car ROW MARKER End-->
+
+</div> <!--Car ROW End-->
+</div> <!--Car FLEX End-->
 </div> <!--Bootstrap Container End-->
 <script type="text/javascript" src="CarLot.js"></script>
 <script type="text/javascript" src="quiz.js"></script>
