Set up console logs for selectCar JS

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 </div> <!--Car FLEX End-->
 </div> <!--Bootstrap Container End-->
 <script type="text/javascript" src="CarLot.js"></script>
+<script type="text/javascript" src="selectCar.js"></script>
 <script type="text/javascript" src="quiz.js"></script>
 </body>
 </html>
