--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <h4>Casey's Car Lot</h4>
     </div>
     <div class="col-md-5">
-      <label>Enter Description: <input type="text" name="userInputField" id="############" class="fullWidth"></label>
+      <label>Enter Description: <input type="text" name="userInputField" id="userInput" class="fullWidth"></label>
     </div>
     <div class="col-md-2">
       <button id="navbarButton">Button</button>
